# leakcheck

./: .gitignore  README.md  pyproject.toml
src/leakcheck/: api.py  checks.py  configs.py  logging_config.py  pipeline.py
src/leakcheck/data/: In-Context Learning examples - Examples with numbering and explanations and model info - overlap.csv  In-Context Learning examples - Examples with numbering and explanations and model info - preproc.csv
src/leakcheck/detection/: detection_model.py  detector.py
src/leakcheck/llm/: FewShotEngine.py  OverlapEngine.py  PreprocEngine.py  prompts.py
src/leakcheck/mapping/: convert_to_script.py  mapping.py
